[gd_scene load_steps=4 format=2]

[ext_resource path="res://noto_sans_24.tres" type="DynamicFont" id=1]
[ext_resource path="res://noto_sans_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://rooms/Room.gd" type="Script" id=3]

[node name="Room" type="PanelContainer"]
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 200 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 243.0
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_right = 232.0
margin_bottom = 236.0
custom_constants/separation = 6

[node name="TopicsRows" type="VBoxContainer" parent="MarginContainer/Rows"]
margin_right = 228.0
margin_bottom = 58.0
custom_constants/separation = -1

[node name="RoomName" type="Label" parent="MarginContainer/Rows/TopicsRows"]
margin_right = 228.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 1 )
text = "Room Name"
align = 1

[node name="RoomId" type="Label" parent="MarginContainer/Rows/TopicsRows"]
margin_top = 34.0
margin_right = 228.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "Room id"
align = 1

[node name="RoomDescription" type="Label" parent="MarginContainer/Rows"]
margin_top = 64.0
margin_right = 228.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Room Script"
autowrap = true
